samples/_failures_safe/1761521012_9223cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_556b3c8d.c: In function ‘main’:
./samples/SAFE/__tmp_556b3c8d.c:169:9: error: expected expression at end of input
  169 |         int new_state = state_machine_handle_event(&sm,
      |         ^~~
./samples/SAFE/__tmp_556b3c8d.c:169:25: error: too few arguments to function ‘state_machine_handle_event’
  169 |         int new_state = state_machine_handle_event(&sm,
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_556b3c8d.c:38:5: note: declared here
   38 | int state_machine_handle_event(StateMachine* sm, int event, const char* input) {
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_556b3c8d.c:169:9: error: expected declaration or statement at end of input
  169 |         int new_state = state_machine_handle_event(&sm,
      |         ^~~
./samples/SAFE/__tmp_556b3c8d.c:169:9: error: expected declaration or statement at end of input
